--- a/Css/index.css
+++ b/Css/index.css
@@ -19,3 +19,17 @@ body{
     font-style: bold;
     font-weight: 800;
 }
+
+.department{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   
+}
+.department > h2{
+    margin:0px;
+    padding-top:0px;
+    padding-left: 70px;
+    font-style: bold;
+    font-weight: 600;
+}
